--- a/styles/style.css
+++ b/styles/style.css
@@ -373,7 +373,7 @@ main .start-btn-container button {
       -ms-flex-direction: row;
           flex-direction: row;
   height: 1rem;
-  padding: 0.5rem;
+  margin: 0.5rem 0;
   position: relative;
   width: 100%;
 }
@@ -422,15 +422,16 @@ main .start-btn-container button {
     -webkit-column-gap: 1rem;
             column-gap: 1rem;
         grid-template-areas: "test info" "test button";
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: auto;
-        grid-template-rows: auto;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     max-width: 64rem;
   }
   main .start-btn-container {
-    -ms-flex-item-align: start;
-        align-self: flex-start;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
   }
   main .test-container {
     -ms-flex-item-align: center;
@@ -438,12 +439,11 @@ main .start-btn-container button {
         align-self: center;
   }
   main .test-info-progress-container {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    margin-top: 2rem;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
   .test-info-progress-container .test-info-container {
+    padding: 1rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
