--- a/styles/style.scss
+++ b/styles/style.scss
@@ -143,26 +143,22 @@ main {
     .info {
         $y: (1 - sin($ALPHA_0))/2 - 0.05;
 
-        align-items: center;
-
         background-color: var(--background-color-primary-dark);
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
         bottom: 0;
         box-sizing: border-box;
-        display: grid;
-        grid-template-areas: "unit";
-        grid-template-columns: 1fr;
+        display: flex;
         height: calc(100% *#{$y});
 
-        justify-items: center;
+        justify-content: center;
         left: 0;
         margin: 0 auto;
         position: absolute;
+        align-items: center;
         right: 0;
 
         width: 75%;
-        // overflow: hidden;
 
         .test-kind {
             display: none;
@@ -170,7 +166,7 @@ main {
         }
 
         .unit-container {
-            --font-size-lg: 3em;
+            --font-size-lg: 3rem;
             grid-area: unit;
             .unit {
                 bottom: var(--font-size-sm);
