--- a/styles/style.scss
+++ b/styles/style.scss
@@ -64,8 +64,7 @@ body {
     height: 100%;
     justify-content: center;
     margin: 0;
-    padding: 0;
-    padding: 0.5rem;
+    padding: 2rem;
     width: 100%;
 }
 
@@ -166,7 +165,6 @@ main {
         }
 
         .unit-container {
-            --font-size-lg: 3rem;
             grid-area: unit;
             .unit {
                 bottom: var(--font-size-sm);
@@ -228,7 +226,7 @@ main {
 }
 
 .unit-container {
-    --font-size-lg: 3rem;
+    --font-size-lg: 3em;
     --font-size-sm: calc(var(--font-size-lg) / 4);
     --height: calc(var(--font-size-lg) + var(--font-size-sm));
     --padding: 0.5rem;
@@ -237,6 +235,8 @@ main {
     position: relative;
     text-align: center;
     transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
+    box-sizing: border-box;
+    margin: var(--padding) 0;
 
     &.in-progress {
         color: rgba(255, 255, 255, 0.25);
@@ -257,6 +257,7 @@ main {
 
 @media all and (orientation: landscape) and (max-height: $screen-size-lg) {
     main {
+        // box-sizing: border-box;
         column-gap: 1rem;
         grid-template-areas:
             "test info"
@@ -265,18 +266,7 @@ main {
         grid-template-rows: 1fr 1fr;
 
         max-width: $meter-height;
-
-        .start-btn-container {
-            align-self: center;
-        }
-
-        .test-container {
-            align-self: center;
-        }
-
-        .test-info-progress-container {
-            align-self: flex-end;
-        }
+        max-height: $meter-width;
     }
 
     .test-info-progress-container {
