--- a/styles/style.css
+++ b/styles/style.css
@@ -33,8 +33,8 @@
 
 .box-shadow {
   border-radius: var(--border-radius-primary);
-  -webkit-box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 .justify-content-space-evenly {
@@ -65,8 +65,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: -webkit-gradient(linear, left top, right top, from(var(--ul-color-1)), to(var(--dl-color-1)));
-  background-image: linear-gradient(to right, var(--ul-color-1), var(--dl-color-1));
+  background-color: var(--color-secondary);
   border-radius: var(--border-radius-primary);
   color: black;
   cursor: pointer;
@@ -125,7 +124,7 @@
 :root {
   --background-color-primary: rgba(51, 51, 51, 1);
   --background-color-primary-dark: rgb(37, 37, 37);
-  --background-color-secondary: rgb(51, 51, 51);
+  --background-color-secondary: rgb(66, 66, 66);
   --font-color-primary: #fff;
   --color-primary: #fff;
   --color-secondary: #34c83c;
@@ -168,12 +167,11 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0;
-  padding: 2rem;
+  padding: 1.5rem;
   width: 100%;
 }
 
 main {
-  background: var(--background-color-primary);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: var(--font-color-primary);
@@ -186,7 +184,7 @@ main {
   height: 100%;
   max-height: 64rem;
   max-width: 32rem;
-  row-gap: 2%;
+  row-gap: 1rem;
   width: 100%;
 }
 
@@ -259,6 +257,7 @@ main .start-btn-container button {
           flex-direction: column;
   position: relative;
   width: 100%;
+  background: var(--background-color-secondary);
 }
 
 .test-container .info {
@@ -335,6 +334,7 @@ main .start-btn-container button {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   padding: 1em 0;
+  background: var(--background-color-secondary);
 }
 
 .test-info-container .info {
@@ -398,7 +398,7 @@ main .start-btn-container button {
 }
 
 .unit-container.in-progress {
-  color: rgba(255, 255, 255, 0.25);
+  color: rgba(255, 255, 255, 0.11);
 }
 
 .unit-container .amount {
