--- a/styles/utils.css
+++ b/styles/utils.css
@@ -32,8 +32,8 @@
 
 .box-shadow {
   border-radius: var(--border-radius-primary);
-  -webkit-box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 .justify-content-space-evenly {
@@ -64,8 +64,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: -webkit-gradient(linear, left top, right top, from(var(--ul-color-1)), to(var(--dl-color-1)));
-  background-image: linear-gradient(to right, var(--ul-color-1), var(--dl-color-1));
+  background-color: var(--color-secondary);
   border-radius: var(--border-radius-primary);
   color: black;
   cursor: pointer;
