--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,6 +38,12 @@ $ALPHA_0: $PI * 0.8;
 
     --meter-background-color: rgb(0, 0, 0, 0.25);
 
+    --progress-bar-gradient: linear-gradient(
+        to right,
+        var(--dl-color-1),
+        var(--ul-color-1)
+    );
+
     --meter-width: #{$meter-width};
     --meter-height: #{$meter-height};
     --meter-padding: #{$meter-padding};
