--- a/styles/style.css
+++ b/styles/style.css
@@ -150,17 +150,6 @@
   --border-radius-primary: 0.5rem;
 }
 
-.ul-color {
-  color: var(--ul-color-1);
-}
-
-.dl-color {
-  background: -webkit-gradient(linear, left top, right top, from(var(--dl-color-1)), to(var(--dl-color-2)));
-  background: linear-gradient(to right, var(--dl-color-1), var(--dl-color-2));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -394,7 +383,33 @@ main .start-btn-container button {
 }
 
 .test-info-container .info .test-kind {
-  font-size: 0.875rem;
+  font-size: 1.5em;
+}
+
+.ul i {
+  color: var(--ul-color-1);
+}
+
+.dl i {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  color: var(--dl-color-2);
+}
+
+.ul-color {
+  background: -webkit-gradient(linear, left top, right top, from(var(--ul-color-1)), to(var(--ul-color-2)));
+  background: linear-gradient(to right, var(--ul-color-1), var(--ul-color-2));
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.dl-color {
+  background: -webkit-gradient(linear, left top, right top, from(var(--dl-color-1)), to(var(--dl-color-2)));
+  background: linear-gradient(to right, var(--dl-color-1), var(--dl-color-2));
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .progress-bar-container {
