--- a/styles/style.scss
+++ b/styles/style.scss
@@ -134,12 +134,17 @@ main {
     width: 100%;
 
     p {
-        font-size: 1rem;
+        font-size: 1.25rem;
     }
 
     h1,
     h2 {
         color: var(--ul-color-1);
+    }
+
+    hr {
+        width: 100%;
+        border-radius: 1rem;
     }
 
     .icon-lg {
@@ -148,7 +153,7 @@ main {
     }
 }
 
-.pane-hidden {
+.hidden {
     pointer-events: none;
     visibility: hidden;
 }
