--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,13 +22,13 @@ $ALPHA_0: $PI * 0.8;
 :root {
     --background-color-primary: rgba(51, 51, 51, 1);
     --background-color-primary-dark: rgb(37, 37, 37);
-    --background-color-secondary: rgb(66, 66, 66);
+    --background-color-secondary: rgb(66, 66, 66, 1);
     --font-color-primary: #fff;
 
     --color-primary: #fff;
     --color-secondary: #34c83c;
     --color-secondary-dark: #2ead34;
-    --font-family-primary: verdana, geneva, sans-serif;
+    --font-family-primary: "Helvetica", sans-serif;
 
     --dl-color-1: #8630e6;
     --dl-color-2: #f71e6a;
@@ -78,7 +78,7 @@ main {
     // background: var(--background-color-primary);
     box-sizing: border-box;
     color: var(--font-color-primary);
-    padding: 5vh 5vw;
+    padding: $row-gap/2;
 
     display: grid;
     font-family: var(--font-family-primary);
@@ -124,12 +124,13 @@ main {
 }
 
 .pane-info {
-    padding: 1rem;
+    --padding: 1rem;
+    padding: var(--padding);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     height: 100%;
     width: 100%;
 
@@ -139,12 +140,27 @@ main {
 
     h1,
     h2 {
-        color: var(--ul-color-1);
+        text-align: left;
+
+        // color: var(--ul-color-1);
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 2rem;
     }
 
     hr {
-        width: 100%;
+        --main-color: white;
+        width: calc(100% + var(--padding));
+        margin-right: calc(-1 * var(--padding));
+        height: 0.1rem;
         border-radius: 1rem;
+        background-color: var(--main-color);
+        border: none;
     }
 
     .icon-lg {
@@ -238,31 +254,24 @@ main {
 
 .ul {
     i {
-        color: var(--ul-color-1);
+        // color: var(--ul-color-1);
     }
-    
 }
 
 .dl {
     i {
         transform: rotate(180deg);
-        color: var(--dl-color-2);
+        // color: var(--dl-color-2);
     }
-    
 }
 
 .ul-color {
-    background: linear-gradient(to right, var(--ul-color-1), var(--ul-color-2));
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+   color: var(--ul-color-1);
 }
 
 .dl-color {
-    background: linear-gradient(to right, var(--dl-color-1), var(--dl-color-2));
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+   color: var(--dl-color-2);
+
 }
 
 .progress-bar-container {
@@ -337,23 +346,23 @@ main {
     }
 }
 
-@media all and (max-width: $screen-size-md) {
-    html,
-    body {
-        font-size: 0.95rem;
-    }
-}
+// @media all and (max-width: $screen-size-md) {
+//     html,
+//     body {
+//         font-size: 0.95rem;
+//     }
+// }
 
-@media all and (max-width: $screen-size-sm) {
-    html,
-    body {
-        font-size: 0.9rem;
-    }
-}
+// @media all and (max-width: $screen-size-sm) {
+//     html,
+//     body {
+//         font-size: 0.9rem;
+//     }
+// }
 
-@media all and (max-width: $screen-size-xs) {
-    html,
-    body {
-        font-size: 0.85rem;
-    }
-}
+// @media all and (max-width: $screen-size-xs) {
+//     html,
+//     body {
+//         font-size: 0.85rem;
+//     }
+// }
